syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/duration.proto"; 

option csharp_namespace = "DataAccessGrpcService";

package DataAccessService;


service DataAccessGrpcService {
 // Methods 

 //Applications
  rpc GetAppsByUserId (GetAppsByUserIdRequest) returns (GetAppsByUserIdReply);
  rpc AddNewApp (AddNewAppRequest) returns (AddNewAppReply);
  rpc UpdateApp (UpdateAppRequest) returns (UpdateAppReply);
  rpc DeleteApp (DeleteAppRequest) returns (DeleteAppReply);
  
  //Dictionaries
  rpc GetDepartments (DepartmentsRequest) returns (DepartmentsReply);
  rpc GetDepartmentById (DepartmentRequest) returns (DepartmentReply);
  rpc AddDepartment (DepartmentRequest) returns (DepartmentReply);
  rpc UpdateDepartment (DepartmentRequest) returns (DepartmentReply);
  rpc DeleteDepartment (DepartmentRequest) returns (DepartmentReply);
}
// Request messages

//Applications
message GetAppsByUserIdRequest { int32 applicantId = 1;  }
message AddNewAppRequest { ApplicationDtoGrpc applicationDto = 1; }
message UpdateAppRequest { ApplicationGrpc updatedApplication = 1; }
message DeleteAppRequest { int32 deleteAppId = 1; }

//Dictionaries
message DepartmentRequest { int32 departmentId = 1; string departmentName = 2;}
message DepartmentsRequest { }

// Responce messages

//Applications
message GetAppsByUserIdReply { repeated ApplicationGrpc applications = 1; }
message AddNewAppReply { int32 resultOfInsert = 1; }
message UpdateAppReply { ApplicationGrpc updatedApplication = 1; }
message DeleteAppReply { int32 deletedAppId = 1; string message = 2; }

//Dictionaries
message DepartmentReply { int32 departmentId = 1; string departmentName = 2; }
message DepartmentsReply { repeated DepartmentGrpc departments = 1; }


message ApplicationGrpc {
  int32 id = 1;
  string subject = 2;
  string description = 3;
  int32 status = 4;
  int32 application_type_id = 5;
  int32 departament_id = 6;
  int32 applicant_id = 7;
  google.protobuf.Int32Value executor_id = 8;
  google.protobuf.Timestamp date_create = 9;
  google.protobuf.Timestamp date_confirm = 10;
  google.protobuf.Timestamp date_close = 11;
}

message ApplicationDtoGrpc {
  string subject = 1;
  string description = 2;
  int32 status = 3;
  int32 application_type_id = 4;
  int32 departament_id = 5;
  int32 applicant_id = 6;
  google.protobuf.Timestamp date_create = 7; 
}

message DepartmentGrpc{
	int32 departamentId = 1;
	string departamentName = 2;
}
